--- a/index.jade
+++ b/index.jade
@@ -14,6 +14,7 @@ html
 		div.container
 			div.row
 				div.col-md-offset-4.col-md-4.col-xs-12
+					
 					div.quote-view
 						div.animated.quote-content(v-show="!estimate", v-cloak, transition="fade")
 							br
@@ -57,8 +58,6 @@ html
 								div.form-group.text-center
 									button.btn.btn-lg.btn-dark(@click="getQuote") Quote Me
 
-
-
 					div.quote-view
 						div.animated.quote-content(v-show="estimate", v-cloak, transition="fade")
 							br
@@ -78,6 +77,7 @@ html
 											i.fa.fa-envelope
 											| &nbsp; Email Us
 									button.btn.btn-lg.btn-link(@click="reset", style="margin-top: 15px") Get Another Quote
+							p.text-center(style="color: #FFF") Fare Quotes are an estimated price for service, pricing may vary based on location, date of service and special events.  Please call for exact pricing or to schedule.
 
 
 		script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdZF1t8WvCfvcP0Yq27UZi0gIIsjWs7qw&libraries=places")
