--- a/index.jade
+++ b/index.jade
@@ -3,7 +3,7 @@
 doctype
 html
 	head
-		title B.O.B. Quoting Tool
+		title B.O.B. Fare Estimator
 		link(rel="stylesheet", href="css/bootstrap.css")
 		link(rel="stylesheet", href="css/app.css")
 		link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css")
@@ -14,7 +14,7 @@ html
 		div.container
 			div.row
 				div.col-md-offset-4.col-md-4.col-xs-12
-					
+
 					div.quote-view
 						div.animated.quote-content(v-show="!estimate", v-cloak, transition="fade")
 							br
