--- a/index.jade
+++ b/index.jade
@@ -83,5 +83,5 @@ html
 		script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdZF1t8WvCfvcP0Yq27UZi0gIIsjWs7qw&libraries=places")
 		script(type="text/javascript", src="js/jquery.js")
 		script(type="text/javascript", src="js/vue.js")
-		script(type="text/javascript", src="js/app.js")
+		script(type="text/javascript", src="js/app.js?v=2")
 
